--- a/Download_Youtube_WAV_and_Splitting_Audio.ipynb
+++ b/Download_Youtube_WAV_and_Splitting_Audio.ipynb
@@ -25,16 +25,28 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ardha27/AI-Song-Cover-RVC/blob/main/Download_Youtube_WAV_and_Splitting_Audio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ukik/AI-Song-Cover-RVC/blob/main/Download_Youtube_WAV_and_Splitting_Audio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 145,
       "metadata": {
-        "id": "xbQ-Jf5ePZbr"
+        "id": "xbQ-Jf5ePZbr",
+        "outputId": "12e83d21-eb60-4f89-d46b-7991997f6437",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Mount Google Drive\n",
         "\n",
@@ -47,16 +59,16 @@
       "source": [
         "#@title Input Form\n",
         "\n",
-        "Mode = \"Splitting\" #@param [\"Separate\", \"Splitting\"]\n",
-        "dataset = \"Youtube\" #@param [\"Youtube\", \"Drive\"]\n",
+        "Mode = \"Separate\" #@param [\"Separate\", \"Splitting\"]\n",
+        "dataset = \"Drive\" #@param [\"Youtube\", \"Drive\"]\n",
         "url = \"\" #@param {type:\"string\"}\n",
-        "drive_path = \"\" #@param {type:\"string\"}\n",
-        "AUDIO_NAME = \"\" #@param {type:\"string\"}\n"
+        "drive_path = \"/content/drive/MyDrive/MUSIC_PRODUCTION/SONG_RESOURCE/REMIX_DJ_Thousand_Years_Yuvoria.wav\" #@param {type:\"string\"}\n",
+        "AUDIO_NAME = \"REMIX_DJ_Thousand_Years_Yuvoria\" #@param {type:\"string\"}\n"
       ],
       "metadata": {
         "id": "Tf9MUvvfPt8v"
       },
-      "execution_count": null,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -71,10 +83,22 @@
         "  !mkdir youtubeaudio"
       ],
       "metadata": {
-        "id": "KSYral95Plvb"
+        "id": "KSYral95Plvb",
+        "outputId": "538bd4bb-6d57-445a-c53b-c0ec747e626d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset is set to Drive. Skipping this section\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -110,10 +134,22 @@
         "        download_from_url(url)"
       ],
       "metadata": {
-        "id": "RYfXSP_QPoJ2"
+        "id": "RYfXSP_QPoJ2",
+        "outputId": "f20d2c1f-2dbb-48f0-e92d-ed91b2005c3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset is set to Drive. Skipping this section\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -122,10 +158,63 @@
         "!python3 -m pip install -U demucs"
       ],
       "metadata": {
-        "id": "3fIc2i15SKBN"
+        "id": "3fIc2i15SKBN",
+        "outputId": "864159ce-2783-48a6-881b-8727bfa5f80e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: demucs in /usr/local/lib/python3.12/dist-packages (4.0.1)\n",
+            "Requirement already satisfied: dora-search in /usr/local/lib/python3.12/dist-packages (from demucs) (0.1.12)\n",
+            "Requirement already satisfied: einops in /usr/local/lib/python3.12/dist-packages (from demucs) (0.8.1)\n",
+            "Requirement already satisfied: julius>=0.2.3 in /usr/local/lib/python3.12/dist-packages (from demucs) (0.2.7)\n",
+            "Requirement already satisfied: lameenc>=1.2 in /usr/local/lib/python3.12/dist-packages (from demucs) (1.8.1)\n",
+            "Requirement already satisfied: openunmix in /usr/local/lib/python3.12/dist-packages (from demucs) (1.3.0)\n",
+            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.12/dist-packages (from demucs) (6.0.3)\n",
+            "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.12/dist-packages (from demucs) (2.9.0+cu126)\n",
+            "Requirement already satisfied: torchaudio>=0.8 in /usr/local/lib/python3.12/dist-packages (from demucs) (2.9.0+cu126)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from demucs) (4.67.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (3.20.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (4.15.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (75.2.0)\n",
+            "Requirement already satisfied: sympy>=1.13.3 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (1.14.0)\n",
+            "Requirement already satisfied: networkx>=2.5.1 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (3.6.1)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (3.1.6)\n",
+            "Requirement already satisfied: fsspec>=0.8.5 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (2025.3.0)\n",
+            "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.6.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (12.6.77)\n",
+            "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.6.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (12.6.77)\n",
+            "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.6.80 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (12.6.80)\n",
+            "Requirement already satisfied: nvidia-cudnn-cu12==9.10.2.21 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (9.10.2.21)\n",
+            "Requirement already satisfied: nvidia-cublas-cu12==12.6.4.1 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (12.6.4.1)\n",
+            "Requirement already satisfied: nvidia-cufft-cu12==11.3.0.4 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (11.3.0.4)\n",
+            "Requirement already satisfied: nvidia-curand-cu12==10.3.7.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (10.3.7.77)\n",
+            "Requirement already satisfied: nvidia-cusolver-cu12==11.7.1.2 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (11.7.1.2)\n",
+            "Requirement already satisfied: nvidia-cusparse-cu12==12.5.4.2 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (12.5.4.2)\n",
+            "Requirement already satisfied: nvidia-cusparselt-cu12==0.7.1 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (0.7.1)\n",
+            "Requirement already satisfied: nvidia-nccl-cu12==2.27.5 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (2.27.5)\n",
+            "Requirement already satisfied: nvidia-nvshmem-cu12==3.3.20 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (3.3.20)\n",
+            "Requirement already satisfied: nvidia-nvtx-cu12==12.6.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (12.6.77)\n",
+            "Requirement already satisfied: nvidia-nvjitlink-cu12==12.6.85 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (12.6.85)\n",
+            "Requirement already satisfied: nvidia-cufile-cu12==1.11.1.6 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (1.11.1.6)\n",
+            "Requirement already satisfied: triton==3.5.0 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (3.5.0)\n",
+            "Requirement already satisfied: omegaconf in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (2.3.0)\n",
+            "Requirement already satisfied: retrying in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (1.4.2)\n",
+            "Requirement already satisfied: submitit in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (1.5.4)\n",
+            "Requirement already satisfied: treetable in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (0.2.6)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from openunmix->demucs) (2.0.2)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy>=1.13.3->torch>=1.8.1->demucs) (1.3.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch>=1.8.1->demucs) (3.0.3)\n",
+            "Requirement already satisfied: antlr4-python3-runtime==4.9.* in /usr/local/lib/python3.12/dist-packages (from omegaconf->dora-search->demucs) (4.9.3)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.1 in /usr/local/lib/python3.12/dist-packages (from submitit->dora-search->demucs) (3.1.2)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -139,13 +228,13 @@
         "elif dataset == \"Youtube\":\n",
         "  command = f\"demucs --two-stems=vocals {AUDIO_INPUT}\"\n",
         "\n",
-        "result = subprocess.run(command.split(), stdout=subprocess.PIPE)\n",
-        "print(result.stdout.decode())"
+        "#result = subprocess.run(command.split(), stdout=subprocess.PIPE)\n",
+        "#print(result.stdout.decode())"
       ],
       "metadata": {
         "id": "_YS1PLGmSQ40"
       },
-      "execution_count": null,
+      "execution_count": 150,
       "outputs": []
     },
     {
@@ -157,10 +246,22 @@
         "  !cp -r /content/youtubeaudio/{AUDIO_NAME}.wav /content/drive/MyDrive/audio/{AUDIO_NAME}\n"
       ],
       "metadata": {
-        "id": "iXRfuu9YTUPu"
+        "id": "iXRfuu9YTUPu",
+        "outputId": "03737627-5fff-45a3-c59c-3bd68807a501",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cp: cannot stat '/content/separated/htdemucs/REMIX_DJ_Thousand_Years_Yuvoria/*': No such file or directory\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -175,10 +276,22 @@
         "  !mkdir -p dataset/{AUDIO_NAME}"
       ],
       "metadata": {
-        "id": "4z_C02unP5S2"
+        "id": "4z_C02unP5S2",
+        "outputId": "80e44848-d990-4f0d-80cc-ccb1061a6c46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mode is set to Separate. Skipping this section\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -346,10 +459,22 @@
         "      soundfile.write(f'/content/dataset/{AUDIO_NAME}/split_{i}.wav', chunk, sr)  # Save sliced audio files with soundfile."
       ],
       "metadata": {
-        "id": "w68iU7zQQYjA"
+        "id": "w68iU7zQQYjA",
+        "outputId": "88683f42-66b3-4c8c-ad6f-5d9e869365f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mode is set to Separate. Skipping this section\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -361,10 +486,22 @@
         "  !cp -r /content/dataset/{AUDIO_NAME}/* /content/drive/MyDrive/dataset/{AUDIO_NAME}"
       ],
       "metadata": {
-        "id": "U5c8uqCrUE3B"
+        "id": "U5c8uqCrUE3B",
+        "outputId": "5c09f209-d0d9-4340-b1c9-821bc2f96d4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mode is set to Separate. Skipping this section\n"
+          ]
+        }
+      ]
     }
   ]
 }
