--- a/Download_Youtube_WAV_and_Splitting_Audio.ipynb
+++ b/Download_Youtube_WAV_and_Splitting_Audio.ipynb
@@ -33,10 +33,10 @@
       "execution_count": 145,
       "metadata": {
         "id": "xbQ-Jf5ePZbr",
-        "outputId": "12e83d21-eb60-4f89-d46b-7991997f6437",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "12e83d21-eb60-4f89-d46b-7991997f6437"
       },
       "outputs": [
         {
@@ -84,10 +84,10 @@
       ],
       "metadata": {
         "id": "KSYral95Plvb",
-        "outputId": "538bd4bb-6d57-445a-c53b-c0ec747e626d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "538bd4bb-6d57-445a-c53b-c0ec747e626d"
       },
       "execution_count": 147,
       "outputs": [
@@ -135,10 +135,10 @@
       ],
       "metadata": {
         "id": "RYfXSP_QPoJ2",
-        "outputId": "f20d2c1f-2dbb-48f0-e92d-ed91b2005c3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f20d2c1f-2dbb-48f0-e92d-ed91b2005c3b"
       },
       "execution_count": 148,
       "outputs": [
@@ -159,12 +159,12 @@
       ],
       "metadata": {
         "id": "3fIc2i15SKBN",
-        "outputId": "864159ce-2783-48a6-881b-8727bfa5f80e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7863f313-fa16-4335-99c0-51bae6919fc8"
       },
-      "execution_count": 149,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,6 +219,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install torchcodec"
+      ],
+      "metadata": {
+        "id": "pHvPi-w7uIRZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title Separate Vocal and Instrument/Noise using Demucs\n",
         "import subprocess\n",
         "AUDIO_INPUT = f\"/content/youtubeaudio/{AUDIO_NAME}.wav\"\n",
@@ -247,10 +258,10 @@
       ],
       "metadata": {
         "id": "iXRfuu9YTUPu",
-        "outputId": "03737627-5fff-45a3-c59c-3bd68807a501",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "03737627-5fff-45a3-c59c-3bd68807a501"
       },
       "execution_count": 151,
       "outputs": [
@@ -277,10 +288,10 @@
       ],
       "metadata": {
         "id": "4z_C02unP5S2",
-        "outputId": "80e44848-d990-4f0d-80cc-ccb1061a6c46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "80e44848-d990-4f0d-80cc-ccb1061a6c46"
       },
       "execution_count": 152,
       "outputs": [
@@ -460,10 +471,10 @@
       ],
       "metadata": {
         "id": "w68iU7zQQYjA",
-        "outputId": "88683f42-66b3-4c8c-ad6f-5d9e869365f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88683f42-66b3-4c8c-ad6f-5d9e869365f4"
       },
       "execution_count": 153,
       "outputs": [
@@ -487,10 +498,10 @@
       ],
       "metadata": {
         "id": "U5c8uqCrUE3B",
-        "outputId": "5c09f209-d0d9-4340-b1c9-821bc2f96d4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5c09f209-d0d9-4340-b1c9-821bc2f96d4b"
       },
       "execution_count": 154,
       "outputs": [
