--- a/Download_Youtube_WAV_and_Splitting_Audio.ipynb
+++ b/Download_Youtube_WAV_and_Splitting_Audio.ipynb
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 159,
       "metadata": {
         "id": "xbQ-Jf5ePZbr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12e83d21-eb60-4f89-d46b-7991997f6437"
+        "outputId": "a7041648-43f3-42ec-ed23-4cf0b80763c3"
       },
       "outputs": [
         {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "Tf9MUvvfPt8v"
       },
-      "execution_count": 146,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -87,9 +87,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "538bd4bb-6d57-445a-c53b-c0ec747e626d"
+        "outputId": "553c0490-3052-47aa-8f19-72d616e1c5cd"
       },
-      "execution_count": 147,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,9 +138,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f20d2c1f-2dbb-48f0-e92d-ed91b2005c3b"
+        "outputId": "74297ea3-ae73-46c4-e747-1a8a16756f4c"
       },
-      "execution_count": 148,
+      "execution_count": 162,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7863f313-fa16-4335-99c0-51bae6919fc8"
+        "outputId": "8ab35d5c-91b2-426c-88a1-3705e3977836"
       },
-      "execution_count": 156,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,10 +222,27 @@
         "!pip install torchcodec"
       ],
       "metadata": {
-        "id": "pHvPi-w7uIRZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pHvPi-w7uIRZ",
+        "outputId": "78820488-0bf2-4c54-dd41-e7959c83e0c9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting torchcodec\n",
+            "  Downloading torchcodec-0.9.1-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (11 kB)\n",
+            "Downloading torchcodec-0.9.1-cp312-cp312-manylinux_2_28_x86_64.whl (2.1 MB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/2.1 MB\u001b[0m \u001b[31m37.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m37.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: torchcodec\n",
+            "Successfully installed torchcodec-0.9.1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -235,7 +252,8 @@
         "AUDIO_INPUT = f\"/content/youtubeaudio/{AUDIO_NAME}.wav\"\n",
         "\n",
         "if dataset == \"Drive\":\n",
-        "  command = f\"demucs --two-stems=vocals {drive_path}\"\n",
+        "  #command = f\"demucs --two-stems=vocals {drive_path}\"\n",
+        "  !demucs --two-stems=vocals \"{drive_path}\"\n",
         "elif dataset == \"Youtube\":\n",
         "  command = f\"demucs --two-stems=vocals {AUDIO_INPUT}\"\n",
         "\n",
@@ -243,10 +261,30 @@
         "#print(result.stdout.decode())"
       ],
       "metadata": {
-        "id": "_YS1PLGmSQ40"
+        "id": "_YS1PLGmSQ40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "808313d7-3b7e-4f23-e387-9054fddc6056"
       },
-      "execution_count": 150,
-      "outputs": []
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1mImportant: the default model was recently changed to `htdemucs`\u001b[0m the latest Hybrid Transformer Demucs model. In some cases, this model can actually perform worse than previous models. To get back the old default model use `-n mdx_extra_q`.\n",
+            "Selected model is a bag of 1 models. You will see that many progress bars per track.\n",
+            "Separated tracks will be stored in /content/separated/htdemucs\n",
+            "Separating track /content/drive/MyDrive/MUSIC_PRODUCTION/SONG_RESOURCE/REMIX_DJ_Thousand_Years_Yuvoria.wav\n",
+            "100%|████████████████████████████████████████████████████████████████████████| 152.1/152.1 [00:06<00:00, 21.88seconds/s]\n",
+            "/usr/local/lib/python3.12/dist-packages/torchaudio/__init__.py:178: UserWarning: The 'encoding' parameter is not fully supported by TorchCodec AudioEncoder.\n",
+            "  return save_with_torchcodec(\n",
+            "/usr/local/lib/python3.12/dist-packages/torchaudio/__init__.py:178: UserWarning: The 'bits_per_sample' parameter is not directly supported by TorchCodec AudioEncoder.\n",
+            "  return save_with_torchcodec(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -261,9 +299,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "03737627-5fff-45a3-c59c-3bd68807a501"
+        "outputId": "aacfdab6-24f4-45d4-c8a3-01f90c45e642"
       },
-      "execution_count": 151,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,9 +329,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80e44848-d990-4f0d-80cc-ccb1061a6c46"
+        "outputId": "aa041e0e-d373-485e-8b6f-9772328f685d"
       },
-      "execution_count": 152,
+      "execution_count": 167,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,9 +512,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "88683f42-66b3-4c8c-ad6f-5d9e869365f4"
+        "outputId": "323840dd-25b7-4cc1-ac3c-baa7b5029e4c"
       },
-      "execution_count": 153,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,9 +539,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c09f209-d0d9-4340-b1c9-821bc2f96d4b"
+        "outputId": "c4dd73f4-f1ef-4f41-dbb1-dcb2263c43d0"
       },
-      "execution_count": 154,
+      "execution_count": 169,
       "outputs": [
         {
           "output_type": "stream",
