--- a/Download_Youtube_WAV_and_Splitting_Audio.ipynb
+++ b/Download_Youtube_WAV_and_Splitting_Audio.ipynb
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 172,
       "metadata": {
         "id": "xbQ-Jf5ePZbr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7041648-43f3-42ec-ed23-4cf0b80763c3"
+        "outputId": "0e50fe43-1340-426a-a2ef-b999ae17acb2"
       },
       "outputs": [
         {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "Tf9MUvvfPt8v"
       },
-      "execution_count": 160,
+      "execution_count": 173,
       "outputs": []
     },
     {
@@ -87,9 +87,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "553c0490-3052-47aa-8f19-72d616e1c5cd"
+        "outputId": "39da343a-117b-48e5-9f12-24f93c405913"
       },
-      "execution_count": 161,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,9 +138,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74297ea3-ae73-46c4-e747-1a8a16756f4c"
+        "outputId": "6de1a9e6-3491-4edb-9b69-6962bc52bb58"
       },
-      "execution_count": 162,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ab35d5c-91b2-426c-88a1-3705e3977836"
+        "outputId": "007de29e-059c-40d1-e8e8-2b3df589b828"
       },
-      "execution_count": 163,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,20 +226,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pHvPi-w7uIRZ",
-        "outputId": "78820488-0bf2-4c54-dd41-e7959c83e0c9"
+        "outputId": "4c005eb9-654a-48f1-a7c7-fe9c9a6f9713"
       },
-      "execution_count": 164,
+      "execution_count": 177,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting torchcodec\n",
-            "  Downloading torchcodec-0.9.1-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (11 kB)\n",
-            "Downloading torchcodec-0.9.1-cp312-cp312-manylinux_2_28_x86_64.whl (2.1 MB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/2.1 MB\u001b[0m \u001b[31m37.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m37.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: torchcodec\n",
-            "Successfully installed torchcodec-0.9.1\n"
+            "Requirement already satisfied: torchcodec in /usr/local/lib/python3.12/dist-packages (0.9.1)\n"
           ]
         }
       ]
@@ -265,9 +260,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "808313d7-3b7e-4f23-e387-9054fddc6056"
+        "outputId": "254242a6-4559-49a0-d20a-21c62ed14ea9"
       },
-      "execution_count": 171,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +272,7 @@
             "Selected model is a bag of 1 models. You will see that many progress bars per track.\n",
             "Separated tracks will be stored in /content/separated/htdemucs\n",
             "Separating track /content/drive/MyDrive/MUSIC_PRODUCTION/SONG_RESOURCE/REMIX_DJ_Thousand_Years_Yuvoria.wav\n",
-            "100%|████████████████████████████████████████████████████████████████████████| 152.1/152.1 [00:06<00:00, 21.88seconds/s]\n",
+            "100%|████████████████████████████████████████████████████████████████████████| 152.1/152.1 [00:07<00:00, 19.70seconds/s]\n",
             "/usr/local/lib/python3.12/dist-packages/torchaudio/__init__.py:178: UserWarning: The 'encoding' parameter is not fully supported by TorchCodec AudioEncoder.\n",
             "  return save_with_torchcodec(\n",
             "/usr/local/lib/python3.12/dist-packages/torchaudio/__init__.py:178: UserWarning: The 'bits_per_sample' parameter is not directly supported by TorchCodec AudioEncoder.\n",
@@ -295,22 +290,10 @@
         "  !cp -r /content/youtubeaudio/{AUDIO_NAME}.wav /content/drive/MyDrive/audio/{AUDIO_NAME}\n"
       ],
       "metadata": {
-        "id": "iXRfuu9YTUPu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "aacfdab6-24f4-45d4-c8a3-01f90c45e642"
+        "id": "iXRfuu9YTUPu"
       },
-      "execution_count": 166,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cp: cannot stat '/content/separated/htdemucs/REMIX_DJ_Thousand_Years_Yuvoria/*': No such file or directory\n"
-          ]
-        }
-      ]
+      "execution_count": 179,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -329,9 +312,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aa041e0e-d373-485e-8b6f-9772328f685d"
+        "outputId": "3f78fe74-ba93-4c33-e316-43c400bdbf8c"
       },
-      "execution_count": 167,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,9 +495,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "323840dd-25b7-4cc1-ac3c-baa7b5029e4c"
+        "outputId": "6add549d-7100-4d66-8e8d-3381070d8ec0"
       },
-      "execution_count": 168,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,9 +522,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4dd73f4-f1ef-4f41-dbb1-dcb2263c43d0"
+        "outputId": "e81f3b40-0093-4fa8-d4c2-1217af5faf2f"
       },
-      "execution_count": 169,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
