--- a/SPLIT Download_Youtube_WAV_and_Splitting_Audio.ipynb
+++ b/SPLIT Download_Youtube_WAV_and_Splitting_Audio.ipynb
@@ -30,20 +30,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "xbQ-Jf5ePZbr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c81cd127-a1ea-4772-b7d6-7ef1611e5d88"
+        "outputId": "eb8183b9-3cbe-4052-a204-cbd6229eaf20"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "Tf9MUvvfPt8v"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -87,9 +87,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39da343a-117b-48e5-9f12-24f93c405913"
+        "outputId": "e885f38c-1c92-4df1-dec4-88bfa1e3e20a"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,9 +138,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6de1a9e6-3491-4edb-9b69-6962bc52bb58"
+        "outputId": "fc089cab-8b49-429a-aad6-c0f5ab9547a4"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,20 +162,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "007de29e-059c-40d1-e8e8-2b3df589b828"
+        "outputId": "9503a4df-af63-4f44-8bf5-0c208542df0a"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: demucs in /usr/local/lib/python3.12/dist-packages (4.0.1)\n",
-            "Requirement already satisfied: dora-search in /usr/local/lib/python3.12/dist-packages (from demucs) (0.1.12)\n",
+            "Collecting demucs\n",
+            "  Downloading demucs-4.0.1.tar.gz (1.2 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m25.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting dora-search (from demucs)\n",
+            "  Downloading dora_search-0.1.12.tar.gz (87 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m87.1/87.1 kB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: einops in /usr/local/lib/python3.12/dist-packages (from demucs) (0.8.1)\n",
-            "Requirement already satisfied: julius>=0.2.3 in /usr/local/lib/python3.12/dist-packages (from demucs) (0.2.7)\n",
-            "Requirement already satisfied: lameenc>=1.2 in /usr/local/lib/python3.12/dist-packages (from demucs) (1.8.1)\n",
-            "Requirement already satisfied: openunmix in /usr/local/lib/python3.12/dist-packages (from demucs) (1.3.0)\n",
+            "Collecting julius>=0.2.3 (from demucs)\n",
+            "  Downloading julius-0.2.7.tar.gz (59 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.6/59.6 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting lameenc>=1.2 (from demucs)\n",
+            "  Downloading lameenc-1.8.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl.metadata (9.9 kB)\n",
+            "Collecting openunmix (from demucs)\n",
+            "  Downloading openunmix-1.3.0-py3-none-any.whl.metadata (17 kB)\n",
             "Requirement already satisfied: pyyaml in /usr/local/lib/python3.12/dist-packages (from demucs) (6.0.3)\n",
             "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.12/dist-packages (from demucs) (2.9.0+cu126)\n",
             "Requirement already satisfied: torchaudio>=0.8 in /usr/local/lib/python3.12/dist-packages (from demucs) (2.9.0+cu126)\n",
@@ -204,14 +217,38 @@
             "Requirement already satisfied: nvidia-cufile-cu12==1.11.1.6 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (1.11.1.6)\n",
             "Requirement already satisfied: triton==3.5.0 in /usr/local/lib/python3.12/dist-packages (from torch>=1.8.1->demucs) (3.5.0)\n",
             "Requirement already satisfied: omegaconf in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (2.3.0)\n",
-            "Requirement already satisfied: retrying in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (1.4.2)\n",
-            "Requirement already satisfied: submitit in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (1.5.4)\n",
-            "Requirement already satisfied: treetable in /usr/local/lib/python3.12/dist-packages (from dora-search->demucs) (0.2.6)\n",
+            "Collecting retrying (from dora-search->demucs)\n",
+            "  Downloading retrying-1.4.2-py3-none-any.whl.metadata (5.5 kB)\n",
+            "Collecting submitit (from dora-search->demucs)\n",
+            "  Downloading submitit-1.5.4-py3-none-any.whl.metadata (7.4 kB)\n",
+            "Collecting treetable (from dora-search->demucs)\n",
+            "  Downloading treetable-0.2.6-py3-none-any.whl.metadata (5.3 kB)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from openunmix->demucs) (2.0.2)\n",
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy>=1.13.3->torch>=1.8.1->demucs) (1.3.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch>=1.8.1->demucs) (3.0.3)\n",
             "Requirement already satisfied: antlr4-python3-runtime==4.9.* in /usr/local/lib/python3.12/dist-packages (from omegaconf->dora-search->demucs) (4.9.3)\n",
-            "Requirement already satisfied: cloudpickle>=1.2.1 in /usr/local/lib/python3.12/dist-packages (from submitit->dora-search->demucs) (3.1.2)\n"
+            "Requirement already satisfied: cloudpickle>=1.2.1 in /usr/local/lib/python3.12/dist-packages (from submitit->dora-search->demucs) (3.1.2)\n",
+            "Downloading lameenc-1.8.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl (249 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m249.1/249.1 kB\u001b[0m \u001b[31m20.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading openunmix-1.3.0-py3-none-any.whl (40 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.0/40.0 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading retrying-1.4.2-py3-none-any.whl (10 kB)\n",
+            "Downloading submitit-1.5.4-py3-none-any.whl (76 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading treetable-0.2.6-py3-none-any.whl (7.4 kB)\n",
+            "Building wheels for collected packages: demucs, julius, dora-search\n",
+            "  Building wheel for demucs (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for demucs: filename=demucs-4.0.1-py3-none-any.whl size=78388 sha256=247c594140ecfcf7a6528c2a65f54ecf7c4403ccf52d453ab82fa5413d9b2223\n",
+            "  Stored in directory: /root/.cache/pip/wheels/1b/0c/20/a3b3daa1f9b65c8b0445729f94740ec335d0f86f1066c5c414\n",
+            "  Building wheel for julius (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for julius: filename=julius-0.2.7-py3-none-any.whl size=21870 sha256=6325039b51405993c5a208dab9c4919b28a9e322a0484bdf2de6205713af2361\n",
+            "  Stored in directory: /root/.cache/pip/wheels/de/c1/ca/544dafe48401e8e2e17064dfe465a390fca9e8720ffa12e744\n",
+            "  Building wheel for dora-search (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for dora-search: filename=dora_search-0.1.12-py3-none-any.whl size=75195 sha256=fabea0507606746e26721ab515ef4b2637b426d5cff690bbf50580cb8dd223ca\n",
+            "  Stored in directory: /root/.cache/pip/wheels/55/40/4c/3478187386b56625ab5aa8a9070ff1eea704ddb27d15abe73f\n",
+            "Successfully built demucs julius dora-search\n",
+            "Installing collected packages: lameenc, treetable, submitit, retrying, julius, dora-search, openunmix, demucs\n",
+            "Successfully installed demucs-4.0.1 dora-search-0.1.12 julius-0.2.7 lameenc-1.8.1 openunmix-1.3.0 retrying-1.4.2 submitit-1.5.4 treetable-0.2.6\n"
           ]
         }
       ]
@@ -226,15 +263,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pHvPi-w7uIRZ",
-        "outputId": "4c005eb9-654a-48f1-a7c7-fe9c9a6f9713"
+        "outputId": "5dc4edbc-8079-4609-a882-27907ff355c7"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: torchcodec in /usr/local/lib/python3.12/dist-packages (0.9.1)\n"
+            "Collecting torchcodec\n",
+            "  Downloading torchcodec-0.9.1-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (11 kB)\n",
+            "Downloading torchcodec-0.9.1-cp312-cp312-manylinux_2_28_x86_64.whl (2.1 MB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━\u001b[0m \u001b[32m1.5/2.1 MB\u001b[0m \u001b[31m41.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m34.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: torchcodec\n",
+            "Successfully installed torchcodec-0.9.1\n"
           ]
         }
       ]
@@ -260,19 +302,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "254242a6-4559-49a0-d20a-21c62ed14ea9"
+        "outputId": "812f1d34-8e65-4ce5-b42b-b5fca0942b12"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[1mImportant: the default model was recently changed to `htdemucs`\u001b[0m the latest Hybrid Transformer Demucs model. In some cases, this model can actually perform worse than previous models. To get back the old default model use `-n mdx_extra_q`.\n",
+            "Downloading: \"https://dl.fbaipublicfiles.com/demucs/hybrid_transformer/955717e8-8726e21a.th\" to /root/.cache/torch/hub/checkpoints/955717e8-8726e21a.th\n",
+            "100% 80.2M/80.2M [00:00<00:00, 196MB/s]\n",
             "Selected model is a bag of 1 models. You will see that many progress bars per track.\n",
             "Separated tracks will be stored in /content/separated/htdemucs\n",
-            "Separating track /content/drive/MyDrive/MUSIC_PRODUCTION/SONG_RESOURCE/REMIX_DJ_Thousand_Years_Yuvoria.wav\n",
-            "100%|████████████████████████████████████████████████████████████████████████| 152.1/152.1 [00:07<00:00, 19.70seconds/s]\n",
+            "Separating track /content/drive/MyDrive/MUSIC_PRODUCTION/VOICE_NOTE/YUVORIA.mp3\n",
+            "100%|██████████████████████████████████████████████████████████████████████| 602.55/602.55 [00:29<00:00, 20.63seconds/s]\n",
             "/usr/local/lib/python3.12/dist-packages/torchaudio/__init__.py:178: UserWarning: The 'encoding' parameter is not fully supported by TorchCodec AudioEncoder.\n",
             "  return save_with_torchcodec(\n",
             "/usr/local/lib/python3.12/dist-packages/torchaudio/__init__.py:178: UserWarning: The 'bits_per_sample' parameter is not directly supported by TorchCodec AudioEncoder.\n",
@@ -292,7 +336,7 @@
       "metadata": {
         "id": "iXRfuu9YTUPu"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -312,15 +356,44 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f78fe74-ba93-4c33-e316-43c400bdbf8c"
+        "outputId": "7a6dbfbe-3899-4fad-87d8-909ccc5b8bb8"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mode is set to Separate. Skipping this section\n"
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
+            "Requirement already satisfied: librosa in /usr/local/lib/python3.12/dist-packages (0.11.0)\n",
+            "Requirement already satisfied: audioread>=2.1.9 in /usr/local/lib/python3.12/dist-packages (from librosa) (3.1.0)\n",
+            "Requirement already satisfied: numba>=0.51.0 in /usr/local/lib/python3.12/dist-packages (from librosa) (0.60.0)\n",
+            "Requirement already satisfied: numpy>=1.22.3 in /usr/local/lib/python3.12/dist-packages (from librosa) (2.0.2)\n",
+            "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from librosa) (1.16.3)\n",
+            "Requirement already satisfied: scikit-learn>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from librosa) (1.6.1)\n",
+            "Requirement already satisfied: joblib>=1.0 in /usr/local/lib/python3.12/dist-packages (from librosa) (1.5.3)\n",
+            "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.12/dist-packages (from librosa) (4.4.2)\n",
+            "Requirement already satisfied: soundfile>=0.12.1 in /usr/local/lib/python3.12/dist-packages (from librosa) (0.13.1)\n",
+            "Requirement already satisfied: pooch>=1.1 in /usr/local/lib/python3.12/dist-packages (from librosa) (1.8.2)\n",
+            "Requirement already satisfied: soxr>=0.3.2 in /usr/local/lib/python3.12/dist-packages (from librosa) (1.0.0)\n",
+            "Requirement already satisfied: typing_extensions>=4.1.1 in /usr/local/lib/python3.12/dist-packages (from librosa) (4.15.0)\n",
+            "Requirement already satisfied: lazy_loader>=0.1 in /usr/local/lib/python3.12/dist-packages (from librosa) (0.4)\n",
+            "Requirement already satisfied: msgpack>=1.0 in /usr/local/lib/python3.12/dist-packages (from librosa) (1.1.2)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from lazy_loader>=0.1->librosa) (25.0)\n",
+            "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /usr/local/lib/python3.12/dist-packages (from numba>=0.51.0->librosa) (0.43.0)\n",
+            "Requirement already satisfied: platformdirs>=2.5.0 in /usr/local/lib/python3.12/dist-packages (from pooch>=1.1->librosa) (4.5.1)\n",
+            "Requirement already satisfied: requests>=2.19.0 in /usr/local/lib/python3.12/dist-packages (from pooch>=1.1->librosa) (2.32.4)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.1.0->librosa) (3.6.0)\n",
+            "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.12/dist-packages (from soundfile>=0.12.1->librosa) (2.0.0)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.12/dist-packages (from cffi>=1.0->soundfile>=0.12.1->librosa) (2.23)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->pooch>=1.1->librosa) (3.4.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->pooch>=1.1->librosa) (3.11)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->pooch>=1.1->librosa) (2.5.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->pooch>=1.1->librosa) (2025.11.12)\n",
+            "Requirement already satisfied: soundfile in /usr/local/lib/python3.12/dist-packages (0.13.1)\n",
+            "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.12/dist-packages (from soundfile) (2.0.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from soundfile) (2.0.2)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.12/dist-packages (from cffi>=1.0->soundfile) (2.23)\n"
           ]
         }
       ]
@@ -491,22 +564,10 @@
         "      soundfile.write(f'/content/dataset/{AUDIO_NAME}/split_{i}.wav', chunk, sr)  # Save sliced audio files with soundfile."
       ],
       "metadata": {
-        "id": "w68iU7zQQYjA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6add549d-7100-4d66-8e8d-3381070d8ec0"
+        "id": "w68iU7zQQYjA"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mode is set to Separate. Skipping this section\n"
-          ]
-        }
-      ]
+      "execution_count": 11,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -518,22 +579,10 @@
         "  !cp -r /content/dataset/{AUDIO_NAME}/* /content/drive/MyDrive/dataset/{AUDIO_NAME}"
       ],
       "metadata": {
-        "id": "U5c8uqCrUE3B",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e81f3b40-0093-4fa8-d4c2-1217af5faf2f"
+        "id": "U5c8uqCrUE3B"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mode is set to Separate. Skipping this section\n"
-          ]
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     }
   ]
 }
