--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ardha27/AI-Song-Cover-RVC/blob/main/TrainingV2_NoUI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ukik/AI-Song-Cover-RVC/blob/main/TrainingV2_NoUI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -78,9 +78,9 @@
         "import os\n",
         "\n",
         "# @title Create Model Folder\n",
-        "model_name = \"kafka\" # @param {type:\"string\"}\n",
+        "model_name = \"YUVORIA\" # @param {type:\"string\"}\n",
         "exp_dir = model_name\n",
-        "dataset = \"/content/drive/MyDrive/dataset/kafka\" # @param {type:\"string\"}\n",
+        "dataset = \"/content/drive/MyDrive/dataset/YUVORIA\" # @param {type:\"string\"}\n",
         "sample_rate = \"48000\" # @param [\"40000\", \"48000\"]\n",
         "ksample_rate = \"48k\"\n",
         "if sample_rate == \"40000\":\n",
@@ -93,7 +93,7 @@
         "f0method = \"rmvpe_gpu\" # @param [\"pm\", \"dio\", \"harvest\", \"rmvpe\", \"rmvpe_gpu\"]\n",
         "\n",
         "save_frequency = 50 # @param {type:\"slider\", min:0, max:50, step:1}\n",
-        "epoch = 10 # @param {type:\"integer\"}\n",
+        "epoch = 200 # @param {type:\"integer\"}\n",
         "batch_size = \"7\" # @param {type:\"string\"}\n",
         "cache_gpu = True # @param {type:\"boolean\"}\n",
         "\n",
