--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -58,6 +58,21 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install faiss-cpu\n",
+        "#!pip install faiss-gpu\n",
+        "\n",
+        "import faiss\n",
+        "print(\"FAISS VERSION:\", faiss.__version__)"
+      ],
+      "metadata": {
+        "id": "TkR8hVsEY2-R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title Unzip File From Drive\n",
         "\n",
         "!unzip -n /content/drive/MyDrive/assets/KiwKiw.zip -d /content\n",
@@ -238,8 +253,7 @@
         "    print(result)"
       ],
       "metadata": {
-        "id": "xzurT_PYQOIJ",
-        "cellView": "form"
+        "id": "xzurT_PYQOIJ"
       },
       "execution_count": null,
       "outputs": []
@@ -429,8 +443,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "rIreV7qsa3Es",
-        "cellView": "form"
+        "id": "rIreV7qsa3Es"
       },
       "execution_count": null,
       "outputs": []
